--- a/src/main.css
+++ b/src/main.css
@@ -84,6 +84,10 @@ img {
   width: 60px;
 }
 
+.btn img {
+  width: 30px;
+}
+
 /* ================
     Font 
     =============== */
@@ -103,6 +107,11 @@ h3 {
   font-size: var(--title-3);
   font-weight: 600;
   line-height: 150%;
+}
+
+span {
+  color: var(--primary-color);
+  font-size: var(--title-1);
 }
 
 a,
@@ -139,11 +148,26 @@ p,
   color: var(--white-color);
 }
 
-.outline,
-.primary:hover {
+.btn:hover {
+  opacity: 0.8;
+}
+
+.outline {
   border-color: var(--primary-color);
   background-color: transparent;
   color: var(--primary-color);
+}
+
+.violet {
+  background-color: var(--btn-secondary-color);
+  border-color: var(--btn-secondary-color);
+  color: var(--white-color);
+}
+
+.blue {
+  background-color: var(--btn-primary-color);
+  border-color: var(--btn-primary-color);
+  color: var(--white-color);
 }
 
 /* Violet button */
