implemented meal service section

--- a/src/main.css
+++ b/src/main.css
@@ -130,6 +130,14 @@ p,
   color: var(--text-secondary-color);
 }
 
+.text-green {
+  color: var(--secondary-color);
+}
+
+.text-violet {
+  color: var(--btn-secondary-color);
+}
+
 /* ================
     Button 
     =============== */
