--- a/src/components/util/navbar/navbar.css
+++ b/src/components/util/navbar/navbar.css
@@ -1,5 +1,5 @@
 nav {
-  padding: 20px;
+  padding: 40px 0;
 }
 
 .logo h3 {
@@ -13,4 +13,37 @@ nav {
 
 nav ul li {
   padding: 10px;
+}
+
+/* Dropdown styles */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  width: 200px;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9; /* Dropdown background color */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Dropdown box shadow */
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.dropdown-content a {
+  font-size: 16px;
+  color: var(--text-primary-color); /* Dropdown item text color */
+  padding: 12px 16px;
+  display: block;
+  border-radius: 10px;
+  transition: 0.2s;
+}
+
+.dropdown-content a:hover {
+  background-color: var(--primary-color); /* Hover background color */
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
