--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,38 +1,24 @@
 .contact-container {
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .contact .flex {
-    padding-top: 5rem;
-    justify-content: flex-start;
-    gap: calc(1rem);
-  }
-  
-  .contact .left {
-     width: 65%;
-     margin-left: 10%;
-  }
-  
-  .left .input-form{
-      margin-top: 25px;
-  }
-  
-  .left .input-form .NameInputBox{
-      width: 65%;
-      padding: 10px;
-      border: 3px solid #ff6347;
-      border-radius: 10px;
-      margin-bottom: 20px;
-  }
-  
-  .right{
-      margin-top: 45px;
-      margin-right: 12%;
-  }
-  
-  .contact-btn{
-      cursor: pointer;
-  }
+  padding: 3rem 0 12rem 0;
+  position: relative;
+}
+
+.contact-container .flex {
+  justify-content: space-around;
+  gap: 2rem;
+}
+.contact-container .left {
+  width: 40%;
+}
+
+.send-arrow {
+  position: absolute;
+  width: 440px;
+  /* height: 400px; */
+  left: 40%;
+  bottom: -3rem;
+}
+
+.contact-container button {
+  padding: 10px 40px;
+}
