--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -1,99 +1,72 @@
+.register-form {
+  width: 40%;
+}
 
-  textarea {
-    border-color: #eee;
-    border-width: 1px;
-  }
-  label, textarea, input {
-    width: 100%;
-    display: block;
-  }
-textarea{
-    
-    border-style: solid;
-    border-color: hsl(270, 75%, 50%);
-    border-width: 3px;
-    border-radius: 5px;
-    height: 65px;
-  }
-input {
-    border-style: solid;
-    border-color: hsl(270, 75%, 50%);
-    border-width: 3px;
-    border-radius: 5px;
-    height: 35px;
-  }
+.violet-form input,
+.violet-form textarea {
+  border-color: var(--btn-secondary-color);
+}
+.black-form input,
+.black-form textarea {
+  border-color: var(--text-primary-color);
+}
+.green-form input,
+.green-form textarea {
+  border-color: var(--secondary-color);
+}
 
-  .member-text{
-    color: hsl(270, 75%, 50%);
-  }
-  .btn-register{
-    padding: 10px 10px 35px;
-    border: 1px solid;
-    border-radius: 10px;
-    font-size: var(--normal-font);
-    transition: 0.3s;
-  }
-  .register-photo{
-    width: 600px;
-    height: 1000px;
-    border: 1px;
-    border-radius: 20px;
-  }
-  .background-div{
-   background-color: hsla(270, 69%, 57%, 0.451);
-   
-   border-radius: 10px;
-  }
-.btn-regPartner{
-  background-color: #000000; 
-border: none;
-color: white;
+.register-photo {
+  position: absolute;
+  right: 0;
+  top: 20%;
+  width: 500px;
+  border-radius: 20px;
+}
 
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 25px;
-padding: 6px 90px 15px;
-border-width: 3px;
-border-radius: 20px;
+.background-div {
+  background-color: hsla(270, 69%, 57%, 0.451);
+  border-radius: 10px;
 }
-.btn-regVolun{
-  background-color: #049b34; 
-  border: none;
-  color: white;
 
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 25px;
-  padding: 6px 75px 15px;
-  border-width: 3px;
-border-radius: 20px;
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  padding: 2rem;
 }
-.btn-regCareGiver{
-  background-color: #f8590af6; 
-  border: none;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 25px;
-  padding: 6px 75px 15px;
-  border-width: 3px;
-border-radius: 20px;
+
+.btn-container p {
+  margin-top: 1rem;
+  padding-left: 1rem;
 }
-.btn-container{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 10px 40px 50px 40px;
+
+.btn-container p a {
+  padding: 0 1rem;
+  font-weight: 700;
+  border-bottom: 1px solid var(--primary-color);
 }
-.logo-reg-btn{
-  width: 40px;
-  height: 40px;
+
+/* --------------
+    Line (Or)
+    ------------- */
+.orLine {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.reg-C{
-  width: 400px;
-  height: 600px;
+
+.orLine::before,
+.orLine::after {
+  content: "";
+  height: 1.5px;
+  width: 48%;
+  background-color: var(--btn-secondary-color);
+}
+
+.orLine::before {
+  margin-inline-end: 20px;
+}
+
+.orLine::after {
+  margin-inline-start: 20px;
 }
