fiex all regiser page and added loading effect

--- a/src/main.css
+++ b/src/main.css
@@ -244,6 +244,15 @@ form .form-btn {
 /* ========================
     Loading
     ======================= */
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  width: 100%;
+}
+
 .lds-ellipsis {
   display: inline-block;
   position: relative;
@@ -256,7 +265,7 @@ form .form-btn {
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: #fff;
+  background: var(--primary-color);
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
