Fixed Home Page Styling

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -20,7 +20,7 @@
   margin-top: 10px;
 }
 
-.home .left .btn-container.flex {
+.home .left .btn-con.flex {
   margin-top: 30px;
   justify-content: flex-start;
 }
