--- a/src/components/management/admin/admin.css
+++ b/src/components/management/admin/admin.css
@@ -1,19 +1,21 @@
 .button {
   background-color: white;
   border: 1px solid rgb(17, 98, 219);
-  padding: 7px;
-  border-radius: 5px;
+  padding: 10px;
+  border-radius: 10px;
   margin-right: 15px;
   cursor: pointer;
+  font-size: 16px;
+  color: var(--text-primary-color);
 }
-table{
-    width: 100%;
-    color: black;
-    margin-bottom: 50px;
+table {
+  width: 100%;
+  color: black;
+  margin-bottom: 50px;
 }
-th{
-    background-color: #ff5900;
-    color: white;
+th {
+  background-color: #ff5900;
+  color: white;
 }
 
 td,
