--- a/src/components/util/navbar/navbar.css
+++ b/src/components/util/navbar/navbar.css
@@ -77,6 +77,7 @@ nav ul li a:hover {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  border: 1px solid var(--primary-color);
   object-fit: cover;
 }
 
